fix: update variable group names in pipeline files
- build.yml
  - changed group from utilities-jwt-ed25519 to utilities-tron-address-converter
- pr-validation-build.yml
  - changed group from utilities-jwt-ed25519 to utilities-tron-address-converter
- production.yml
  - changed group from utilities-jwt-ed25519 to utilities-tron-address-converter

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -5,7 +5,7 @@ stages:
   condition: ne(variables['Build.Reason'], 'PullRequest')
   displayName: Build & Test
   variables:
-  - group: utilities-jwt-ed25519
+  - group: utilities-tron-address-converter
   - group: Sonarqube
 
   jobs:
