--- a/azure-pipelines/production.yml
+++ b/azure-pipelines/production.yml
@@ -6,7 +6,7 @@ stages:
   condition: and(eq(variables['Build.SourceBranch'], 'refs/heads/main'), succeeded('Build'))
   displayName: Production release
   variables:
-  - group: utilities-jwt-ed25519
+  - group: utilities-tron-address-converter
 
   # Pack and upload package to NuGet
   jobs:
