fix: update coverage report path in build configuration
- build.yml
  - change report path to use $(Agent.TempDirectory)

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -84,7 +84,7 @@ stages:
       condition: eq(variables['hasTestProjects'], 'true')
       displayName: Merge code coverage reports
       inputs:
-        reports: '**/*coverage.*.xml'
+        reports: '$(Agent.TempDirectory)/**/*coverage.*.xml'
         targetdir: '$(Pipeline.Workspace)/coverlet'
         reporttypes: 'Cobertura'
         verbosity: 'Verbose'
