fix: update coverage report path and package version
- build.yml
  - change reports path to '**/*coverage.*.xml'

- Utilities.Tron.AddressConverter.Tests.csproj
  - update coverlet.msbuild package version to 6.0.4

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -84,7 +84,7 @@ stages:
       condition: eq(variables['hasTestProjects'], 'true')
       displayName: Merge code coverage reports
       inputs:
-        reports: '$(Agent.TempDirectory)/**/*coverage.*.xml'
+        reports: '**/*coverage.*.xml'
         targetdir: '$(Pipeline.Workspace)/coverlet'
         reporttypes: 'Cobertura'
         verbosity: 'Verbose'
