--- a/src/Utilities.Tron.AddressConverter/Utilities.Tron.AddressConverter.csproj
+++ b/src/Utilities.Tron.AddressConverter/Utilities.Tron.AddressConverter.csproj
@@ -17,6 +17,10 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="\" />
+    <None Include="../../LICENSE" Pack="true" PackagePath="" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="8.0.16" />
     <PackageReference Include="SimpleBase" Version="5.4.1" />
   </ItemGroup>
