--- a/azure-pipelines/production.yml
+++ b/azure-pipelines/production.yml
@@ -33,7 +33,7 @@ stages:
             displayName: Pack
             inputs:
               command: pack
-              arguments: '-c $(Build.BuildConfiguration) /p:Version=$(Build.Version)'
+              arguments: '-c $(Build.BuildConfiguration) -p:Version=$(Build.Version) -p:PackageVersion=$(Build.Version)'
               packagesToPack: $(Build.BuildProjects)
               versioningScheme: byEnvVar
               versionEnvVar: Build.Version
@@ -42,10 +42,6 @@ stages:
           - task: DotNetCoreCLI@2
             displayName: Upload package to NuGet
             inputs:
-              # command: push
-              # searchPatternPush: $(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.Tests.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg
-              # nuGetFeedType: external
-              # publishFeedCredentials: Nuget-github
               command: custom
               custom: nuget
               arguments: 'push $(Build.ArtifactStagingDirectory)/**/*.nupkg -s $(Nuget.ApiUrl) -k $(Nuget.ApiKey)'
