fix: update arguments for packing and uploading NuGet package
- build.yml
  - updated arguments to use quotes for Version variable
- production.yml
  - updated arguments to use quotes for Version and PackageVersion variables

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -67,7 +67,7 @@ stages:
       displayName: Build for code scanning
       inputs:
         projects: '$(Build.BuildProjects)'
-        arguments: '-c $(Build.BuildConfiguration) /p:Version=$(Build.Version)'
+        arguments: '-c $(Build.BuildConfiguration) -p:Version="$(Build.Version)"'
 
     # unit testing if test projects exist
     - task: DotNetCoreCLI@2
